--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "astar-subql-starter",
-  "version": "0.0.4",
-  "description": "This SubQuery project can be use as a starting point for Astar network",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc -b",
-    "prepack": "rm -rf dist && npm build",
-    "test": "jest",
-    "codegen": "./node_modules/.bin/subql codegen"
-  },
-  "homepage": "https://github.com/subquery/astar-subql-starter",
-  "repository": "github:subquery/astar-subql-starter",
-  "files": [
-    "dist",
-    "schema.graphql",
-    "project.yaml"
-  ],
-  "author": "Ian He & Jay Ji",
-  "license": "MIT",
-  "devDependencies": {
-    "@polkadot/api": "^7",
-    "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
-  },
-  "exports": {
-    "chaintypes": "src/chaintypes.ts"
-  }
+	"name": "astar-subql-starter",
+	"version": "0.0.4",
+	"description": "This SubQuery project can be use as a starting point for Astar network",
+	"main": "dist/index.js",
+	"scripts": {
+		"build": "tsc -b",
+		"prepack": "rm -rf dist && npm build",
+		"test": "jest",
+		"codegen": "./node_modules/.bin/subql codegen",
+		"start:docker": "docker-compose pull && docker-compose up"
+	},
+	"homepage": "https://github.com/subquery/astar-subql-starter",
+	"repository": "github:subquery/astar-subql-starter",
+	"files": [
+		"dist",
+		"schema.graphql",
+		"project.yaml"
+	],
+	"author": "Ian He & Jay Ji",
+	"license": "MIT",
+	"devDependencies": {
+		"@polkadot/api": "^7",
+		"@subql/types": "latest",
+		"typescript": "^4.1.3",
+		"@subql/cli": "latest"
+	},
+	"exports": {
+		"chaintypes": "src/chaintypes.ts"
+	}
 }
